--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,11 +1,25 @@
 body{
     font-family: 'Libre Franklin', sans-serif;
+    scroll-behavior: smooth;
 }
 
 .destaquedropdown{
     z-index: 1100;
 }
 
+#home{
+    position: relative;
+    margin-top: 2%;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.espacoentreasintroducoes{
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
 
 @media screen and (min-width: 1001px){
     .espacocarrossel{
